fix: Adjust line height for project description to improve readability

--- a/styles.css
+++ b/styles.css
@@ -5476,7 +5476,7 @@ body {
 
   .focus-project-item .project-description {
     font-size: 0.7rem;
-    line-height: 1.3;
+    line-height: 1.2;
   }
 
   .focus-project-item .project-tools span:first-child {
@@ -5496,11 +5496,10 @@ body {
     min-height: 19px;
   } */
 
-  .project-name,
+  /* .project-name,
   .project-topic {
     line-height: 1.2;
-    /* Fix cutoff */
-  }
+  } */
 
 
 }
